修复http2长时间keepalive报协议错误

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,3 +117,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: ./*.zip
+          generate_release_notes: true
