新增斗鱼直播

--- a/config.json
+++ b/config.json
@@ -18,6 +18,11 @@
       "name": "MKLNtic"
     },
     {
+      "platform": "Douyu",
+      "id": "101",
+      "name": "PDD"
+    },
+    {
       "platform": "Youtube",
       "id": "UCShXNLMXCfstmWKH_q86B8w",
       "name": "斑比鹿乃"
