--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
   "proxy": "http://127.0.0.1:7890",
-  "format": "ts",
   "user": [
     {
       "platform": "Bilibili",
       "id": "15152878",
       "name": "鹿乃",
       "interval": 10,
+      "format": "mp4",
       "headers": {
         "Referer": "https://live.bilibili.com/"
       },
