提示Twitcasting长连接问题

--- a/config.json
+++ b/config.json
@@ -45,7 +45,8 @@
     {
       "platform": "Twitcasting",
       "id": "kano_2525",
-      "name": "鹿乃"
+      "name": "鹿乃",
+      "interval": 8
     }
   ]
 }
