--- a/config.sample.json
+++ b/config.sample.json
@@ -47,6 +47,11 @@
       "id": "kano_2525",
       "name": "鹿乃",
       "interval": 8
+    },
+    {
+      "platform": "Afreeca",
+      "id": "legendhyuk",
+      "name": "legendhyuk"
     }
   ]
 }
