新增虎牙直播

--- a/config.sample.json
+++ b/config.sample.json
@@ -52,6 +52,11 @@
       "platform": "Afreeca",
       "id": "legendhyuk",
       "name": "legendhyuk"
+    },
+    {
+      "platform": "Huya",
+      "id": "991111",
+      "name": "TheShy"
     }
   ]
 }
