新增抖音直播

--- a/config.sample.json
+++ b/config.sample.json
@@ -23,6 +23,11 @@
       "name": "TheShy"
     },
     {
+      "platform": "Douyin",
+      "id": "282773369501",
+      "name": "央视新闻"
+    },
+    {
       "platform": "Youtube",
       "id": "UCShXNLMXCfstmWKH_q86B8w",
       "name": "斑比鹿乃"
