新增自定义user列表中的output、proxy字段

--- a/config.sample.json
+++ b/config.sample.json
@@ -8,6 +8,8 @@
       "name": "鹿乃",
       "interval": 10,
       "format": "mp4",
+      "output": "bilibili_鹿乃",
+      "proxy": "socks5://127.0.0.1:7890",
       "headers": {
         "Referer": "https://live.bilibili.com/"
       },
