优化niconico直播相关逻辑

--- a/config.sample.json
+++ b/config.sample.json
@@ -41,6 +41,11 @@
       "name": "桜帆鹿乃"
     },
     {
+      "platform": "Niconico",
+      "id": "ch2648052",
+      "name": "niconico-Vtuber"
+    },
+    {
       "platform": "Twitcasting",
       "id": "kano_2525",
       "name": "鹿乃",
