去除socksio依赖，改用httpx-socks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           pip3 install .
 
       - name: Pyinstaller build
-        run: pyinstaller build/main.spec --distpath .
+        run: pyinstaller build.spec --distpath .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
