--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "jsonpath-ng>=1.6.0",
     "jsengine>=1.0.7.post1",
     "quickjs>=1.19.2",
-    "tenacity>=8.2.3"
+    "tenacity>=8.2.3",
+    "httpx-socks[asyncio]>=0.7.8"
 ]
 
 [project.urls]
