--- a/config.sample.json
+++ b/config.sample.json
@@ -60,6 +60,11 @@
       "platform": "Pandalive",
       "id": "seeenv",
       "name": "seeenv"
+    },
+    {
+      "platform": "Bigolive",
+      "id": "660801666",
+      "name": "660801666"
     }
   ]
 }
