1.新增部分日志输出 2.优化部分网络环境中SSL验证失败后重试时禁用SSL验证，最大程度保证录制可用 3.部分网络环境中js加密库访问失败，增加crypto_js_url配置选项，让用户自己配置可用的链接

--- a/config.sample.json
+++ b/config.sample.json
@@ -13,6 +13,7 @@
       "headers": {
         "Referer": "https://live.bilibili.com/"
       },
+      "crypto_js_url": "https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js",
       "cookies": "SESSDATA=xxxxx; bili_jct=xxxxx"
     },
     {
